[gd_scene load_steps=12 format=3 uid="uid://bl1rsospjewi4"]

[ext_resource type="Texture2D" uid="uid://dauaxcuaohmdk" path="res://Galactic Arithmetic Assets/Level1_Assets/Enemies/spider_upscaled.png" id="1_lnmtt"]
[ext_resource type="Script" path="res://spider.gd" id="1_uukay"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bqx58"]
radius = 46.0

[sub_resource type="Animation" id="Animation_tyssb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_jeecs"]
resource_name = "down"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_omnjb"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 4]
}

[sub_resource type="Animation" id="Animation_gm0y5"]
resource_name = "left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_43du5"]
resource_name = "right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [14, 15, 16, 14]
}

[sub_resource type="Animation" id="Animation_dwdmg"]
resource_name = "up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7xa7q"]
_data = {
"RESET": SubResource("Animation_tyssb"),
"down": SubResource("Animation_jeecs"),
"idle": SubResource("Animation_omnjb"),
"left": SubResource("Animation_gm0y5"),
"right": SubResource("Animation_43du5"),
"up": SubResource("Animation_dwdmg")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jqt13"]

[node name="spider_enemy" type="CharacterBody2D" groups=["spider"]]
collision_layer = 8
collision_mask = 29
script = ExtResource("1_uukay")
enemy_speed = 70.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
texture = ExtResource("1_lnmtt")
hframes = 7
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bqx58")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7xa7q")
}

[node name="area_det" type="Area2D" parent="."]

[node name="collision_det" type="CollisionShape2D" parent="area_det"]
shape = SubResource("CircleShape2D_jqt13")

[connection signal="body_entered" from="area_det" to="." method="_on_area_det_body_entered"]
[connection signal="body_exited" from="area_det" to="." method="_on_area_det_body_exited"]
